overflowing bug fixed

--- a/public/style/navbar.css
+++ b/public/style/navbar.css
@@ -19,7 +19,10 @@ nav {
 .input-searchbar {
     background-color: #f9f9f9;
     height: 25px;
-    width: 206px;
+    width:  100%;
+    width :206px;
+    margin-left:0px;
+
 }
 
 /*---------placement---------*/
